[package]
name = "twoface"
version = "0.1.0"
authors = ["Adam Chalmers <achalmers@cloudflare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version =  "1.0", optional = true }


[features]
actix_web = ["serde", "serde_json", "actix-web"]